# engine-tomato

./: .gitignore  CMakeLists.txt
assets/: shader.fs  shader.vs
contents/: CMakeLists.txt  GameState.cpp  GameState.h  TestState.cpp  TestState.h  main.cpp
engine/: CMakeLists.txt
engine/components/: PlayerController.h  Rigidbody.h  Transform.h
engine/include/tomato/: DefaultState.h  Engine.h  EngineConfig.h  FontContext.h  Logger.h  RegistryEntry.h  SimulationContext.h  State.h  tomato.h  tomato_math.h  tomato_packet_types.h  tomato_sim.h  tomato_types.h
engine/include/tomato/collision/: ColliderSupport.h  CollisionConstants.h  CollisionEvent.h  CollisionLayerMatrix.h
engine/include/tomato/containers/: EnumArray.h  MemoryPool.h  RingArray.h  RingBuffer.h  SPSCQueue.h  Timeline.h
engine/include/tomato/ecs/: SystemManager.h  SystemRegistry.h  World.h  tomato_ecs.h
engine/include/tomato/ecs/components/: Camera.h  Collision.h  Movement.h  Render.h  Rigidbody.h  Sprite.h  Tags.h  Text.h  Transform.h  UI.h
engine/include/tomato/ecs/systems/: CameraSystem.h  CollisionSystem.h  KinematicMovementSystem.h  RenderSystem.h  System.h  TransformSystem.h  UISystem.h
engine/include/tomato/event/: EventDispatcher.h  EventSignal.h
engine/include/tomato/input/: InputConstants.h  InputRecord.h  InputRecorder.h  InputTypes.h
engine/include/tomato/net/: InputNetMessage.h  NetBitReader.h  NetBitWriter.h  NetMessage.h  NetMessageRegistry.h  tomato_message_type.h
engine/include/tomato/net/rollback/: CoreRollback.h  PlayerInputTimeline.h  RollbackManager.h  RollbackSlice.h  RollbackSliceTimeline.h
engine/include/tomato/render/: Mesh.h  Shader.h  Texture.h
engine/include/tomato/resource/: AssetRegistry.h  AtlasManager.h  TextRenderer.h  tomato_resource.h
engine/include/tomato/resource/render/: Font.h  Mesh.h  Shader.h  Texture.h  TextureAtlas.h
engine/include/tomato/serialization/: BitReader.h  BitWriter.h
engine/include/tomato/services/: CharacterInputHistory.h  InputService.h  InputTypes.h  PlayerInputTimeline.h  WindowService.h
engine/include/tomato/services/input/: InputService.h
engine/include/tomato/services/network/: CoreNetwork.h  NetBitReader.h  NetBitWriter.h  NetConnection.h  NetDriver.h  NetworkService.h  Socket.h  SocketAddress.h  SocketUtil.h  TCPNetDriver.h  TCPSocket.h  WinsockContext.h
engine/include/tomato/utils/: BitmaskOperators.h  Utf.h
engine/managers/: GameManager.cpp  GameManager.h
engine/src/collision/: ColliderSupport.cpp
engine/src/core/: DefaultState.cpp  Engine.cpp  State.cpp
engine/src/ecs/: SystemManager.cpp  SystemRegistry.cpp  World.cpp
engine/src/ecs/systems/: CameraSystem.cpp  CollisionSystem.cpp  KinematicMovementSystem.cpp  RenderSystem.cpp  TransformSystem.cpp  UISystem.cpp
engine/src/input/: InputRecorder.cpp
engine/src/net/: InputNetMessage.cpp  NetBitReader.cpp  NetBitWriter.cpp  NetMessageRegistry.cpp
engine/src/render/: Mesh.cpp  Shader.cpp  Texture.cpp
engine/src/resource/: AtlasManager.cpp  TextRenderer.cpp  tomato_resource.cpp
engine/src/resource/render/: Font.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  TextureAtlas.cpp
engine/src/services/: InputService.cpp  WindowService.cpp
engine/src/services/input/: InputService.cpp
engine/src/services/network/: NetBitReader.cpp  NetBitWriter.cpp  NetConnection.cpp  NetDriver.cpp  NetworkService.cpp  Socket.cpp  SocketAddress.cpp  SocketUtil.cpp  TCPNetDriver.cpp  TCPSocket.cpp
engine/src/utils/: Utf.cpp
engine/states/: State.h
matchserver/: CMakeLists.txt
matchserver/include/: Match.h  MatchManager.h  MatchServer.h  MatchTypes.h  NetworkService.h  PacketTypes.h  ServerTypes.h  Session.h  SessionManager.h
matchserver/src/: Match.cpp  MatchManager.cpp  MatchServer.cpp  NetworkService.cpp  Session.cpp  SessionManager.cpp  main.cpp
